Fixed cryptodetails stats alignment

--- a/src/App.css
+++ b/src/App.css
@@ -202,6 +202,7 @@ a::before {
     font-size: 1rem;
     opacity: 0.9;
     padding: 20px;
+    align-items: center;
 
 }
 
